[package]
name = "porkbun-api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
anyhow = "1"

hyper = "1"
hyper-util = { version = "0.1.5", features = [
    "client",
    "client-legacy",
    "http1",
    "http2",
    "tokio",
] }
hyper-tls = "0.6.0"
http-body-util = "0.1.2"

[dev-dependencies]
tokio = { version = "1.40.0", features = [
    "macros",
    "net",
    "time",
    "rt-multi-thread",
] }
